# flowydeamon/model__api_job_finished_post_request.go
@@ -1,211 +1,0 @@
-/*
-My API
-
-This is the API
-
-API version: 1.0.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package main
-
-import (
-	"encoding/json"
-	"fmt"
-)
-
-// checks if the ApiJobFinishedPostRequest type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &ApiJobFinishedPostRequest{}
-
-// ApiJobFinishedPostRequest struct for ApiJobFinishedPostRequest
-type ApiJobFinishedPostRequest struct {
-	Id string `json:"id"`
-	ExitCode float32 `json:"exitCode"`
-	Results map[string][]ApiJobFinishedPostRequestResultsValueInner `json:"results"`
-}
-
-type _ApiJobFinishedPostRequest ApiJobFinishedPostRequest
-
-// NewApiJobFinishedPostRequest instantiates a new ApiJobFinishedPostRequest object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewApiJobFinishedPostRequest(id string, exitCode float32, results map[string][]ApiJobFinishedPostRequestResultsValueInner) *ApiJobFinishedPostRequest {
-	this := ApiJobFinishedPostRequest{}
-	this.Id = id
-	this.ExitCode = exitCode
-	this.Results = results
-	return &this
-}
-
-// NewApiJobFinishedPostRequestWithDefaults instantiates a new ApiJobFinishedPostRequest object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewApiJobFinishedPostRequestWithDefaults() *ApiJobFinishedPostRequest {
-	this := ApiJobFinishedPostRequest{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *ApiJobFinishedPostRequest) GetId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *ApiJobFinishedPostRequest) GetIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *ApiJobFinishedPostRequest) SetId(v string) {
-	o.Id = v
-}
-
-// GetExitCode returns the ExitCode field value
-func (o *ApiJobFinishedPostRequest) GetExitCode() float32 {
-	if o == nil {
-		var ret float32
-		return ret
-	}
-
-	return o.ExitCode
-}
-
-// GetExitCodeOk returns a tuple with the ExitCode field value
-// and a boolean to check if the value has been set.
-func (o *ApiJobFinishedPostRequest) GetExitCodeOk() (*float32, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.ExitCode, true
-}
-
-// SetExitCode sets field value
-func (o *ApiJobFinishedPostRequest) SetExitCode(v float32) {
-	o.ExitCode = v
-}
-
-// GetResults returns the Results field value
-func (o *ApiJobFinishedPostRequest) GetResults() map[string][]ApiJobFinishedPostRequestResultsValueInner {
-	if o == nil {
-		var ret map[string][]ApiJobFinishedPostRequestResultsValueInner
-		return ret
-	}
-
-	return o.Results
-}
-
-// GetResultsOk returns a tuple with the Results field value
-// and a boolean to check if the value has been set.
-func (o *ApiJobFinishedPostRequest) GetResultsOk() (*map[string][]ApiJobFinishedPostRequestResultsValueInner, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Results, true
-}
-
-// SetResults sets field value
-func (o *ApiJobFinishedPostRequest) SetResults(v map[string][]ApiJobFinishedPostRequestResultsValueInner) {
-	o.Results = v
-}
-
-func (o ApiJobFinishedPostRequest) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o ApiJobFinishedPostRequest) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["exitCode"] = o.ExitCode
-	toSerialize["results"] = o.Results
-	return toSerialize, nil
-}
-
-func (o *ApiJobFinishedPostRequest) UnmarshalJSON(bytes []byte) (err error) {
-    // This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"exitCode",
-		"results",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(bytes, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varApiJobFinishedPostRequest := _ApiJobFinishedPostRequest{}
-
-	err = json.Unmarshal(bytes, &varApiJobFinishedPostRequest)
-
-	if err != nil {
-		return err
-	}
-
-	*o = ApiJobFinishedPostRequest(varApiJobFinishedPostRequest)
-
-	return err
-}
-
-type NullableApiJobFinishedPostRequest struct {
-	value *ApiJobFinishedPostRequest
-	isSet bool
-}
-
-func (v NullableApiJobFinishedPostRequest) Get() *ApiJobFinishedPostRequest {
-	return v.value
-}
-
-func (v *NullableApiJobFinishedPostRequest) Set(val *ApiJobFinishedPostRequest) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableApiJobFinishedPostRequest) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableApiJobFinishedPostRequest) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableApiJobFinishedPostRequest(val *ApiJobFinishedPostRequest) *NullableApiJobFinishedPostRequest {
-	return &NullableApiJobFinishedPostRequest{value: val, isSet: true}
-}
-
-func (v NullableApiJobFinishedPostRequest) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableApiJobFinishedPostRequest) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
